--- a/AgoraEducation/Supporting Files/Info.plist
+++ b/AgoraEducation/Supporting Files/Info.plist
@@ -29,6 +29,8 @@
 	<string>App needs your permission to access camera for video interaction</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>App needs your permission to access microphone for audio interaction</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App needs your permissio to access photo library</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
